// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@Component（非 @Entry） > createComponent + json { component: true } 1`] = `
"=== child.wxml ===
<!-- Generated by ArkMP, do not edit -->
<text class="arkmp-n0">{{title}}</text>

=== child.wxss ===
.arkmp-page{width:100%;min-height:100vh;box-sizing:border-box;}
.arkmp-col{display:flex;flex-direction:column;box-sizing:border-box;}
.arkmp-row{display:flex;flex-direction:row;box-sizing:border-box;}
.arkmp-text{display:inline;}
.arkmp-btn{display:flex;align-items:center;justify-content:center;box-sizing:border-box;}
.arkmp-input{box-sizing:border-box;height:80rpx;line-height:80rpx;}
.arkmp-textarea{box-sizing:border-box;}

.arkmp-n0 {
  font-size: 32rpx;
}

=== child.js ===
// Generated by ArkMP, do not edit
const { createComponent } = require('@arkmp/runtime');

createComponent({
  properties: {
    title: { type: String, value: "默认" },
  },
});

=== child.json ===
{
  "component": true
}
"
`;

exports[`@Link 双向绑定 > properties + __set_count 桥接 + 事件方法改写为 __set 1`] = `
"=== index.wxml ===
<!-- Generated by ArkMP, do not edit -->
<view class="arkmp-btn" bindtap="__n0_click">加一</view>

=== index.wxss ===
.arkmp-page{width:100%;min-height:100vh;box-sizing:border-box;}
.arkmp-col{display:flex;flex-direction:column;box-sizing:border-box;}
.arkmp-row{display:flex;flex-direction:row;box-sizing:border-box;}
.arkmp-text{display:inline;}
.arkmp-btn{display:flex;align-items:center;justify-content:center;box-sizing:border-box;}
.arkmp-input{box-sizing:border-box;height:80rpx;line-height:80rpx;}
.arkmp-textarea{box-sizing:border-box;}

=== index.js ===
// Generated by ArkMP, do not edit
const { createComponent } = require('@arkmp/runtime');

createComponent({
  properties: {
    count: Number,
  },
  methods: {
    __set_count(v) {
      this.setData({ count: v });
      this.triggerEvent('update:count', v);
    },
    __n0_click() {
      this.__set_count(this.count + 1);
    },
  },
});

=== index.json ===
{
  "component": true
}
"
`;

exports[`if / ForEach 控制流 > wx:if/wx:else + wx:for，key 回退 warning 带 file 1`] = `
"=== index.wxml ===
<!-- Generated by ArkMP, do not edit -->
<view class="arkmp-col">
  <block wx:if="{{showDone}}">
    <text>已完成</text>
  </block>
  <block wx:else>
    <text>未完成</text>
  </block>
  <block wx:for="{{todos}}" wx:for-item="item" wx:for-index="index" wx:key="index">
    <text>{{item}}</text>
  </block>
</view>

=== index.wxss ===
.arkmp-page{width:100%;min-height:100vh;box-sizing:border-box;}
.arkmp-col{display:flex;flex-direction:column;box-sizing:border-box;}
.arkmp-row{display:flex;flex-direction:row;box-sizing:border-box;}
.arkmp-text{display:inline;}
.arkmp-btn{display:flex;align-items:center;justify-content:center;box-sizing:border-box;}
.arkmp-input{box-sizing:border-box;height:80rpx;line-height:80rpx;}
.arkmp-textarea{box-sizing:border-box;}

=== index.js ===
// Generated by ArkMP, do not edit
const { createComponent } = require('@arkmp/runtime');

createComponent({
  state: {
    showDone: false,
    todos: ["a","b"],
  },
});

=== index.json ===
{
  "component": true
}
"
`;

exports[`端到端：README 的 Index.ets > 产出四件套且无诊断 1`] = `
"=== index.wxml ===
<!-- Generated by ArkMP, do not edit -->
<view class="arkmp-col arkmp-n0" style="gap: 24rpx">
  <text class="arkmp-n1">点击次数：{{count}}</text>
  <view class="arkmp-btn" bindtap="__n2_click">点我 +1</view>
</view>

=== index.wxss ===
.arkmp-page{width:100%;min-height:100vh;box-sizing:border-box;}
.arkmp-col{display:flex;flex-direction:column;box-sizing:border-box;}
.arkmp-row{display:flex;flex-direction:row;box-sizing:border-box;}
.arkmp-text{display:inline;}
.arkmp-btn{display:flex;align-items:center;justify-content:center;box-sizing:border-box;}
.arkmp-input{box-sizing:border-box;height:80rpx;line-height:80rpx;}
.arkmp-textarea{box-sizing:border-box;}

.arkmp-n0 {
  width: 100%;
  justify-content: center;
}

.arkmp-n1 {
  font-size: 40rpx;
}

=== index.js ===
// Generated by ArkMP, do not edit
const { createPage } = require('@arkmp/runtime');

createPage({
  state: {
    count: 0,
  },
  methods: {
    __n2_click() {
      this.__set('count', this.count + 1);
    },
  },
});

=== index.json ===
{}
"
`;
